# soze

./: .gitignore  .gitmodules  .rustfmt.toml  README.md  build_and_deploy.sh  build_webapp.sh  deploy.py  docker-compose.build.yml  docker-compose.hw-display.yml  docker-compose.pi.yml  docker-compose.yml  pom.xml  run.kdl  serial_debug.py
LCD-Arduino/: HardwareSerial.h  LCD-Arduino.ino
api/: Cargo.toml  Dockerfile  pi.Dockerfile  pi.dockerignore  requirements.txt  setup.py
api/soze_api/: __init__.py  api.py  color.py  error.py  resource.py  setting.py  settings.py  util.py
api/src/: color.rs  db.rs  error.rs  main.rs  resource.rs
api/tests/: test_setting.py  test_settings.py  test_util.py
client/: setup.py
core/: setup.py
curses_display/: gui.py
hw_display/: Dockerfile  core_requirements.txt  hw_requirements.txt  mock.Dockerfile  pi.Dockerfile  pi.dockerignore  requirements.txt
mock_display/: requirements.txt
mock_hardware/: pyproject.toml
pi/: lcd.py  main.py
py_display/: ccd.service  setup.py  sozed.service
reducer/: Dockerfile  pi.Dockerfile  requirements.txt  setup.py
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: color.rs  main.rs  resource.rs
rust/src/api/: error.rs  routes.rs  state.rs
rust/src/display/: keepalive.rs  lcd.rs  led.rs  mod.rs
rust/src/reducer/: mod.rs  resource.rs  state.rs
rust/src/resource/: lcd.rs  led.rs  mod.rs
rust/src/state/: common.rs  hardware.rs  mod.rs  user.rs
scripts/: build_and_push.sh  deploy.sh  soze.ahk
server/: Dockerfile  casecontrol.service  cc.py  ccs.py  ccs.service  color.py  lcd.py  (+12 more)
(+341 files in other folders)
